# ocw-central-backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml  mock_data.md  server.go  wire.go  wire_gen.go
.github/: PULL_REQUEST_TEMPLATE.md
env/: env.go
graph/: query.resolvers.go  resolver.go  subject.resolvers.go
interactor/: academic_field_interactor.go  resource_interactor.go  subject_interactor.go  syllabus_interactor.go  video_interactor.go
migrations/: 000001_create_subjects_and_videos_tables.down.sql  000001_create_subjects_and_videos_tables.up.sql  000001_create_tables.down.sql  000001_create_tables.up.sql  000002_add_transcription_column_to_videos.down.sql  000002_add_transcription_column_to_videos.up.sql  000002_create_syllabuses_tables.down.sql  000002_create_syllabuses_tables.up.sql  000003_create_chapters_tables.down.sql  000003_create_chapters_tables.up.sql  000003_create_translation.down.sql  000003_create_translation.up.sql  000004_create_faculties_tables.down.sql  000004_create_faculties_tables.up.sql  000005_create_pdfs_tables.down.sql  000005_create_pdfs_tables.up.sql  000006_create_subpages_tables.down.sql  000006_create_subpages_tables.up.sql  000007_create_subject_related_subjects_tables.down.sql  000007_create_subject_related_subjects_tables.up.sql  000008_create_subject_faculty_tables.down.sql  000008_create_subject_faculty_tables.up.sql  000009_create_syllabus_faculty_tables.down.sql  (+3 more)
model/: chapter.go  faculty.go  pdf.go  (+13 more)
scripts/scraping/poetry_env/: pyproject.toml
(+228 files in other folders)
